parser.output
Terminals unused in grammar

    NULLPOINTER
    EQ


State 125 conflicts: 1 shift/reduce
State 168 conflicts: 1 shift/reduce
State 169 conflicts: 1 shift/reduce, 1 reduce/reduce
State 269 conflicts: 1 reduce/reduce
State 316 conflicts: 1 reduce/reduce


Grammar

    0 $accept: SourceFile $end

    1 SourceFile: PackageClause SCOLON ImportDeclList TopLevelDeclList

    2 OpenBlock: %empty

    3 CloseBlock: %empty

    4 PackageClause: PACKAGE PackageName

    5 PackageName: IDENTIFIER

    6 ImportDeclList: ImportDeclList ImportDecl SCOLON
    7               | ImportDecl SCOLON

    8 ImportDecl: IMPORT LEFTPARAN ImportSpecList RIGHTPARAN
    9           | IMPORT LEFTPARAN RIGHTPARAN
   10           | IMPORT ImportSpec

   11 ImportSpecList: ImportSpecList ImportSpec SCOLON
   12               | ImportSpec SCOLON

   13 ImportSpec: PackageName ImportPath
   14           | DOT ImportPath
   15           | ImportPath

   16 ImportPath: String

   17 TopLevelDeclList: TopLevelDeclList TopLevelDecl SCOLON
   18                 | TopLevelDecl SCOLON

   19 TopLevelDecl: Declaration
   20             | FunctionDecl
   21             | MethodDecl

   22 Block: LEFTBRACE OpenBlock StatementList CloseBlock RIGHTBRACE

   23 Condition: Expression

   24 StatementList: StatementList Statement SCOLON
   25              | Statement SCOLON

   26 Statement: Declaration
   27          | LabeledStmt
   28          | SimpleStmt
   29          | ReturnStmt
   30          | BreakStmt
   31          | ContinueStmt
   32          | GotoStmt
   33          | SwitchStmt
   34          | FallthroughStmt
   35          | Block
   36          | IfStmt
   37          | ForStmt

   38 Declaration: TypeDecl
   39            | VarDecl
   40            | ConstDecl

   41 FunctionDecl: FUNC IDENTIFIER OpenBlock Signature FunctionBody CloseBlock
   42             | FUNC IDENTIFIER OpenBlock Signature CloseBlock

   43 MethodDecl: FUNC Receiver IDENTIFIER Signature
   44           | FUNC Receiver IDENTIFIER Signature FunctionBody

   45 LabeledStmt: IDENTIFIER COLON Statement

   46 SimpleStmt: EmptyStmt
   47           | ExpressionStmt
   48           | IncDecStmt
   49           | Assignment
   50           | ShortVarDecl

   51 EmptyStmt: %empty

   52 ExpressionStmt: Expression

   53 IncDecStmt: Expression PLUSPLUS
   54           | Expression MINUSMINUS

   55 Assignment: ExpressionList ASSGN_OP ExpressionList

   56 ShortVarDecl: IdentifierList INFER_EQ ExpressionList

   57 VarDecl: VAR VarSpec
   58        | VAR LEFTPARAN VarSpecList RIGHTPARAN

   59 VarSpecList: VarSpecList VarSpec SCOLON
   60            | VarSpec SCOLON

   61 VarSpec: IdentifierList Type
   62        | IdentifierList Type ASSGN_OP ExpressionList
   63        | IdentifierList ASSGN_OP ExpressionList

   64 ConstDecl: CONST ConstSpec
   65          | CONST LEFTPARAN ConstSpecList RIGHTPARAN
   66          | CONST LEFTPARAN RIGHTPARAN

   67 ConstSpecList: ConstSpecList ConstSpec SCOLON
   68              | ConstSpec SCOLON

   69 ConstSpec: IdentifierList Type
   70          | IdentifierList Type ASSGN_OP ExpressionList
   71          | IdentifierList ASSGN_OP ExpressionList

   72 FunctionBody: Block

   73 Signature: Parameters
   74          | Parameters Result

   75 Result: LEFTPARAN TypeList RIGHTPARAN
   76       | Type

   77 TypeList: TypeList COMMA Type
   78         | Type

   79 Parameters: LEFTPARAN RIGHTPARAN
   80           | LEFTPARAN ParameterList RIGHTPARAN
   81           | LEFTPARAN ParameterList COMMA RIGHTPARAN

   82 ParameterList: ParameterDecl
   83              | ParameterList COMMA ParameterDecl

   84 ParameterDecl: IdentifierList Type

   85 IdentifierList: IdentifierList COMMA IDENTIFIER
   86               | IDENTIFIER

   87 Receiver: Parameters

   88 CompositeLit: LiteralType LiteralValue

   89 LiteralType: StructType
   90            | ArrayType
   91            | PointerType
   92            | SliceType
   93            | LEFTSQUARE ELIPSIS RIGHTSQUARE Operand
   94            | MapType

   95 Type: LiteralType
   96     | OperandName

   97 Operand: Literal
   98        | OperandName
   99        | LEFTPARAN Expression RIGHTPARAN

  100 OperandName: IDENTIFIER

  101 LiteralValue: LEFTBRACE RIGHTBRACE
  102             | LEFTBRACE ElementList RIGHTBRACE
  103             | LEFTBRACE ElementList COMMA RIGHTBRACE

  104 SliceType: LEFTSQUARE RIGHTSQUARE Type

  105 ElementList: KeyedElement
  106            | ElementList COMMA KeyedElement

  107 KeyedElement: Element
  108             | Key COLON Element

  109 Key: Expression
  110    | LiteralValue

  111 Element: Expression
  112        | LiteralValue

  113 ReturnStmt: RETURN
  114           | RETURN ExpressionList

  115 BreakStmt: BREAK
  116          | BREAK IDENTIFIER

  117 ContinueStmt: CONTINUE
  118             | CONTINUE IDENTIFIER

  119 GotoStmt: GOTO IDENTIFIER

  120 SwitchStmt: ExprSwitchStmt

  121 ExprSwitchStmt: SWITCH LEFTBRACE RIGHTBRACE
  122               | SWITCH SimpleStmt SCOLON LEFTBRACE RIGHTBRACE
  123               | SWITCH Expression LEFTBRACE RIGHTBRACE
  124               | SWITCH SimpleStmt SCOLON Expression LEFTBRACE RIGHTBRACE
  125               | SWITCH LEFTBRACE ExprCaseClauseList RIGHTBRACE
  126               | SWITCH SimpleStmt SCOLON LEFTBRACE ExprCaseClauseList RIGHTBRACE
  127               | SWITCH Expression LEFTBRACE ExprCaseClauseList RIGHTBRACE
  128               | SWITCH SimpleStmt SCOLON Expression LEFTBRACE ExprCaseClauseList RIGHTBRACE

  129 ExprCaseClauseList: ExprCaseClauseList ExprCaseClause
  130                   | ExprCaseClause

  131 ExprCaseClause: ExprSwitchCase COLON StatementList

  132 ExprSwitchCase: CASE ExpressionList
  133               | DEFAULT

  134 FallthroughStmt: FALLTHROUGH

  135 IfStmt: IF Expression Block
  136       | IF SimpleStmt SCOLON Expression Block
  137       | IF Expression Block ELSE IfStmt
  138       | IF Expression Block ELSE Block
  139       | IF SimpleStmt SCOLON Expression Block ELSE IfStmt
  140       | IF SimpleStmt SCOLON Expression Block ELSE Block

  141 ForStmt: FOR Block
  142        | FOR ForClause Block
  143        | FOR Condition Block
  144        | FOR RangeClause Block

  145 ForClause: InitStmt SCOLON SCOLON PostStmt
  146          | InitStmt SCOLON Condition SCOLON PostStmt

  147 InitStmt: SimpleStmt

  148 PostStmt: SimpleStmt

  149 RangeClause: RANGE Expression
  150            | IdentifierList INFER_EQ RANGE Expression
  151            | ExpressionList ASSGN_OP RANGE Expression

  152 Expression: Expression MUL Expression
  153           | Expression QUOT Expression
  154           | Expression MOD Expression
  155           | Expression SHL Expression
  156           | Expression SHR Expression
  157           | Expression AND Expression
  158           | Expression ANDNOT Expression
  159           | Expression ADD Expression
  160           | Expression SUB Expression
  161           | Expression OR Expression
  162           | Expression XOR Expression
  163           | Expression LOGAND Expression
  164           | Expression LOGOR Expression
  165           | Expression ISEQ Expression
  166           | Expression NEQ Expression
  167           | Expression GRTEQ Expression
  168           | Expression GRT Expression
  169           | Expression LESSEQ Expression
  170           | Expression LESS Expression
  171           | UnaryExpr

  172 UnaryExpr: MUL UnaryExpr
  173          | AND UnaryExpr
  174          | ADD UnaryExpr
  175          | SUB UnaryExpr
  176          | NOT UnaryExpr
  177          | PrimaryExpr

  178 PrimaryExpr: Operand
  179            | MakeExpr
  180            | PrimaryExpr Selector
  181            | PrimaryExpr Index
  182            | PrimaryExpr Slice
  183            | PrimaryExpr Arguments
  184            | OperandName StructLiteral
  185            | PrimaryExpr TypeAssertion

  186 StructLiteral: LEFTBRACE KeyValueList RIGHTBRACE

  187 KeyValueList: Expression COLON Expression
  188             | Expression COLON Expression COMMA KeyValueList

  189 Selector: DOT IDENTIFIER

  190 Index: LEFTSQUARE Expression RIGHTSQUARE

  191 Slice: LEFTSQUARE COLON Expression RIGHTSQUARE
  192      | LEFTSQUARE COLON RIGHTSQUARE
  193      | LEFTSQUARE Expression COLON RIGHTSQUARE
  194      | LEFTSQUARE Expression COLON Expression RIGHTSQUARE
  195      | LEFTSQUARE COLON Expression COLON Expression RIGHTSQUARE
  196      | LEFTSQUARE Expression COLON Expression COLON Expression RIGHTSQUARE

  197 MakeExpr: MAKE LEFTPARAN Type COMMA Expression COMMA Expression RIGHTPARAN
  198         | MAKE LEFTPARAN Type COMMA Expression RIGHTPARAN
  199         | MAKE LEFTPARAN Type RIGHTPARAN
  200         | NEW LEFTPARAN Type RIGHTPARAN

  201 TypeAssertion: DOT LEFTPARAN Type RIGHTPARAN

  202 Arguments: LEFTPARAN RIGHTPARAN
  203          | LEFTPARAN ExpressionList RIGHTPARAN
  204          | LEFTPARAN ExpressionList ELIPSIS RIGHTPARAN

  205 ExpressionList: Expression
  206               | ExpressionList COMMA Expression

  207 TypeDecl: TYPE LEFTPARAN TypeSpecList RIGHTPARAN
  208         | TYPE TypeSpec

  209 TypeSpecList: TypeSpecList TypeSpec SCOLON
  210             | TypeSpec SCOLON

  211 TypeSpec: AliasDecl
  212         | TypeDef

  213 AliasDecl: IDENTIFIER ASSGN_OP Type

  214 TypeDef: IDENTIFIER Type

  215 MapType: MAP LEFTSQUARE Type RIGHTSQUARE Type

  216 StructType: STRUCT LEFTBRACE FieldDeclList RIGHTBRACE
  217           | STRUCT LEFTBRACE RIGHTBRACE

  218 FieldDeclList: FieldDecl SCOLON
  219              | FieldDeclList FieldDecl SCOLON

  220 FieldDecl: IdentifierList Type String
  221          | IdentifierList Type

  222 PointerType: MUL BaseType

  223 BaseType: Type

  224 ArrayType: LEFTSQUARE Expression RIGHTSQUARE Type

  225 Literal: BasicLit
  226        | CompositeLit

  227 BasicLit: INTEGER_VAL
  228         | FLOAT_VAL
  229         | BYTE_VAL
  230         | String
  231         | TRUE
  232         | FALSE

  233 String: RAW_STRING
  234       | INTERPRETED_STRING


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER_VAL <sval> (258) 227
    FLOAT_VAL <sval> (259) 228
    TRUE <sval> (260) 231
    FALSE <sval> (261) 232
    NULLPOINTER <sval> (262)
    BREAK <sval> (263) 115 116
    CONTINUE <sval> (264) 117 118
    RETURN <sval> (265) 113 114
    SCOLON <sval> (266) 1 6 7 11 12 17 18 24 25 59 60 67 68 122 124 126 128 136 139 140 145 146 209 210 218 219
    FUNC <sval> (267) 41 42 43 44
    STRUCT <sval> (268) 216 217
    ELSE <sval> (269) 137 138 139 140
    PACKAGE <sval> (270) 4
    IF <sval> (271) 135 136 137 138 139 140
    FOR <sval> (272) 141 142 143 144
    RANGE <sval> (273) 149 150 151
    IMPORT <sval> (274) 8 9 10
    VAR <sval> (275) 57 58
    SWITCH <sval> (276) 121 122 123 124 125 126 127 128
    CASE <sval> (277) 132
    NEW <sval> (278) 200
    CONST <sval> (279) 64 65 66
    MAP <sval> (280) 215
    DEFAULT <sval> (281) 133
    MAKE <sval> (282) 197 198 199
    GOTO <sval> (283) 119
    FALLTHROUGH <sval> (284) 134
    TYPE <sval> (285) 207 208
    PLUSPLUS <sval> (286) 53
    MINUSMINUS <sval> (287) 54
    ANDNOT <sval> (288) 158
    ELIPSIS <sval> (289) 93 204
    ADD <sval> (290) 159 174
    SUB <sval> (291) 160 175
    NOT <sval> (292) 176
    XOR <sval> (293) 162
    MUL <sval> (294) 152 172 222
    AND <sval> (295) 157 173
    OR <sval> (296) 161
    LOGOR <sval> (297) 164
    LOGAND <sval> (298) 163
    ISEQ <sval> (299) 165
    NEQ <sval> (300) 166
    LESSEQ <sval> (301) 169
    GRTEQ <sval> (302) 167
    GRT <sval> (303) 168
    LESS <sval> (304) 170
    MOD <sval> (305) 154
    QUOT <sval> (306) 153
    SHL <sval> (307) 155
    SHR <sval> (308) 156
    EQ <sval> (309)
    INFER_EQ <sval> (310) 56 150
    RIGHTPARAN <sval> (311) 8 9 58 65 66 75 79 80 81 99 197 198 199 200 201 202 203 204 207
    RIGHTBRACE <sval> (312) 22 101 102 103 121 122 123 124 125 126 127 128 186 216 217
    RIGHTSQUARE <sval> (313) 93 104 190 191 192 193 194 195 196 215 224
    LEFTPARAN <sval> (314) 8 9 58 65 66 75 79 80 81 99 197 198 199 200 201 202 203 204 207
    LEFTBRACE <sval> (315) 22 101 102 103 121 122 123 124 125 126 127 128 186 216 217
    LEFTSQUARE <sval> (316) 93 104 190 191 192 193 194 195 196 215 224
    COLON <sval> (317) 45 108 131 187 188 191 192 193 194 195 196
    DOT <sval> (318) 14 189 201
    COMMA <sval> (319) 77 81 83 85 103 106 188 197 198 206
    RAW_STRING <sval> (320) 233
    INTERPRETED_STRING <sval> (321) 234
    BYTE_VAL <sval> (322) 229
    IDENTIFIER <sval> (323) 5 41 42 43 44 45 85 86 100 116 118 119 189 213 214
    ASSGN_OP <sval> (324) 55 62 63 70 71 151 213


Nonterminals, with rules where they appear

    $accept (70)
        on left: 0
    SourceFile <nt> (71)
        on left: 1
        on right: 0
    OpenBlock (72)
        on left: 2
        on right: 22 41 42
    CloseBlock (73)
        on left: 3
        on right: 22 41 42
    PackageClause <nt> (74)
        on left: 4
        on right: 1
    PackageName <nt> (75)
        on left: 5
        on right: 4 13
    ImportDeclList <nt> (76)
        on left: 6 7
        on right: 1 6
    ImportDecl <nt> (77)
        on left: 8 9 10
        on right: 6 7
    ImportSpecList <nt> (78)
        on left: 11 12
        on right: 8 11
    ImportSpec <nt> (79)
        on left: 13 14 15
        on right: 10 11 12
    ImportPath <nt> (80)
        on left: 16
        on right: 13 14 15
    TopLevelDeclList <nt> (81)
        on left: 17 18
        on right: 1 17
    TopLevelDecl <nt> (82)
        on left: 19 20 21
        on right: 17 18
    Block <nt> (83)
        on left: 22
        on right: 35 72 135 136 137 138 139 140 141 142 143 144
    Condition <nt> (84)
        on left: 23
        on right: 143 146
    StatementList <nt> (85)
        on left: 24 25
        on right: 22 24 131
    Statement <nt> (86)
        on left: 26 27 28 29 30 31 32 33 34 35 36 37
        on right: 24 25 45
    Declaration <nt> (87)
        on left: 38 39 40
        on right: 19 26
    FunctionDecl <nt> (88)
        on left: 41 42
        on right: 20
    MethodDecl <nt> (89)
        on left: 43 44
        on right: 21
    LabeledStmt <nt> (90)
        on left: 45
        on right: 27
    SimpleStmt <nt> (91)
        on left: 46 47 48 49 50
        on right: 28 122 124 126 128 136 139 140 147 148
    EmptyStmt <nt> (92)
        on left: 51
        on right: 46
    ExpressionStmt <nt> (93)
        on left: 52
        on right: 47
    IncDecStmt <nt> (94)
        on left: 53 54
        on right: 48
    Assignment <nt> (95)
        on left: 55
        on right: 49
    ShortVarDecl <nt> (96)
        on left: 56
        on right: 50
    VarDecl <nt> (97)
        on left: 57 58
        on right: 39
    VarSpecList <nt> (98)
        on left: 59 60
        on right: 58 59
    VarSpec <nt> (99)
        on left: 61 62 63
        on right: 57 59 60
    ConstDecl <nt> (100)
        on left: 64 65 66
        on right: 40
    ConstSpecList (101)
        on left: 67 68
        on right: 65 67
    ConstSpec (102)
        on left: 69 70 71
        on right: 64 67 68
    FunctionBody <nt> (103)
        on left: 72
        on right: 41 44
    Signature <nt> (104)
        on left: 73 74
        on right: 41 42 43 44
    Result <nt> (105)
        on left: 75 76
        on right: 74
    TypeList <nt> (106)
        on left: 77 78
        on right: 75 77
    Parameters <nt> (107)
        on left: 79 80 81
        on right: 73 74 87
    ParameterList <nt> (108)
        on left: 82 83
        on right: 80 81 83
    ParameterDecl <nt> (109)
        on left: 84
        on right: 82 83
    IdentifierList <nt> (110)
        on left: 85 86
        on right: 56 61 62 63 69 70 71 84 85 150 220 221
    Receiver <nt> (111)
        on left: 87
        on right: 43 44
    CompositeLit <nt> (112)
        on left: 88
        on right: 226
    LiteralType <nt> (113)
        on left: 89 90 91 92 93 94
        on right: 88 95
    Type <nt> (114)
        on left: 95 96
        on right: 61 62 69 70 76 77 78 84 104 197 198 199 200 201 213 214 215 220 221 223 224
    Operand <nt> (115)
        on left: 97 98 99
        on right: 93 178
    OperandName <nt> (116)
        on left: 100
        on right: 96 98 184
    LiteralValue <nt> (117)
        on left: 101 102 103
        on right: 88 110 112
    SliceType <nt> (118)
        on left: 104
        on right: 92
    ElementList <nt> (119)
        on left: 105 106
        on right: 102 103 106
    KeyedElement <nt> (120)
        on left: 107 108
        on right: 105 106
    Key <nt> (121)
        on left: 109 110
        on right: 108
    Element <nt> (122)
        on left: 111 112
        on right: 107 108
    ReturnStmt <nt> (123)
        on left: 113 114
        on right: 29
    BreakStmt <nt> (124)
        on left: 115 116
        on right: 30
    ContinueStmt <nt> (125)
        on left: 117 118
        on right: 31
    GotoStmt <nt> (126)
        on left: 119
        on right: 32
    SwitchStmt <nt> (127)
        on left: 120
        on right: 33
    ExprSwitchStmt <nt> (128)
        on left: 121 122 123 124 125 126 127 128
        on right: 120
    ExprCaseClauseList <nt> (129)
        on left: 129 130
        on right: 125 126 127 128 129
    ExprCaseClause (130)
        on left: 131
        on right: 129 130
    ExprSwitchCase <nt> (131)
        on left: 132 133
        on right: 131
    FallthroughStmt <nt> (132)
        on left: 134
        on right: 34
    IfStmt <nt> (133)
        on left: 135 136 137 138 139 140
        on right: 36 137 139
    ForStmt <nt> (134)
        on left: 141 142 143 144
        on right: 37
    ForClause (135)
        on left: 145 146
        on right: 142
    InitStmt (136)
        on left: 147
        on right: 145 146
    PostStmt (137)
        on left: 148
        on right: 145 146
    RangeClause <nt> (138)
        on left: 149 150 151
        on right: 144
    Expression <nt> (139)
        on left: 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171
        on right: 23 52 53 54 99 109 111 123 124 127 128 135 136 137 138 139 140 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 187 188 190 191 193 194 195 196 197 198 205 206 224
    UnaryExpr <nt> (140)
        on left: 172 173 174 175 176 177
        on right: 171 172 173 174 175 176
    PrimaryExpr <nt> (141)
        on left: 178 179 180 181 182 183 184 185
        on right: 177 180 181 182 183 185
    StructLiteral <nt> (142)
        on left: 186
        on right: 184
    KeyValueList <nt> (143)
        on left: 187 188
        on right: 186 188
    Selector <nt> (144)
        on left: 189
        on right: 180
    Index <nt> (145)
        on left: 190
        on right: 181
    Slice <nt> (146)
        on left: 191 192 193 194 195 196
        on right: 182
    MakeExpr <nt> (147)
        on left: 197 198 199 200
        on right: 179
    TypeAssertion <nt> (148)
        on left: 201
        on right: 185
    Arguments <nt> (149)
        on left: 202 203 204
        on right: 183
    ExpressionList <nt> (150)
        on left: 205 206
        on right: 55 56 62 63 70 71 114 132 151 203 204 206
    TypeDecl <nt> (151)
        on left: 207 208
        on right: 38
    TypeSpecList <nt> (152)
        on left: 209 210
        on right: 207 209
    TypeSpec <nt> (153)
        on left: 211 212
        on right: 208 209 210
    AliasDecl <nt> (154)
        on left: 213
        on right: 211
    TypeDef <nt> (155)
        on left: 214
        on right: 212
    MapType <nt> (156)
        on left: 215
        on right: 94
    StructType <nt> (157)
        on left: 216 217
        on right: 89
    FieldDeclList <nt> (158)
        on left: 218 219
        on right: 216 219
    FieldDecl <nt> (159)
        on left: 220 221
        on right: 218 219
    PointerType <nt> (160)
        on left: 222
        on right: 91
    BaseType <nt> (161)
        on left: 223
        on right: 222
    ArrayType <nt> (162)
        on left: 224
        on right: 90
    Literal <nt> (163)
        on left: 225 226
        on right: 97
    BasicLit <nt> (164)
        on left: 227 228 229 230 231 232
        on right: 225
    String <nt> (165)
        on left: 233 234
        on right: 16 220 230


State 0

    0 $accept: • SourceFile $end

    PACKAGE  shift, and go to state 1

    SourceFile     go to state 2
    PackageClause  go to state 3


State 1

    4 PackageClause: PACKAGE • PackageName

    IDENTIFIER  shift, and go to state 4

    PackageName  go to state 5


State 2

    0 $accept: SourceFile • $end

    $end  shift, and go to state 6


State 3

    1 SourceFile: PackageClause • SCOLON ImportDeclList TopLevelDeclList

    SCOLON  shift, and go to state 7


State 4

    5 PackageName: IDENTIFIER •

    $default  reduce using rule 5 (PackageName)


State 5

    4 PackageClause: PACKAGE PackageName •

    $default  reduce using rule 4 (PackageClause)


State 6

    0 $accept: SourceFile $end •

    $default  accept


State 7

    1 SourceFile: PackageClause SCOLON • ImportDeclList TopLevelDeclList

    IMPORT  shift, and go to state 8

    ImportDeclList  go to state 9
    ImportDecl      go to state 10


State 8

    8 ImportDecl: IMPORT • LEFTPARAN ImportSpecList RIGHTPARAN
    9           | IMPORT • LEFTPARAN RIGHTPARAN
   10           | IMPORT • ImportSpec

    LEFTPARAN           shift, and go to state 11
    DOT                 shift, and go to state 12
    RAW_STRING          shift, and go to state 13
    INTERPRETED_STRING  shift, and go to state 14
    IDENTIFIER          shift, and go to state 4

    PackageName  go to state 15
    ImportSpec   go to state 16
    ImportPath   go to state 17
    String       go to state 18


State 9

    1 SourceFile: PackageClause SCOLON ImportDeclList • TopLevelDeclList
    6 ImportDeclList: ImportDeclList • ImportDecl SCOLON

    FUNC    shift, and go to state 19
    IMPORT  shift, and go to state 8
    VAR     shift, and go to state 20
    CONST   shift, and go to state 21
    TYPE    shift, and go to state 22

    ImportDecl        go to state 23
    TopLevelDeclList  go to state 24
    TopLevelDecl      go to state 25
    Declaration       go to state 26
    FunctionDecl      go to state 27
    MethodDecl        go to state 28
    VarDecl           go to state 29
    ConstDecl         go to state 30
    TypeDecl          go to state 31


State 10

    7 ImportDeclList: ImportDecl • SCOLON

    SCOLON  shift, and go to state 32


State 11

    8 ImportDecl: IMPORT LEFTPARAN • ImportSpecList RIGHTPARAN
    9           | IMPORT LEFTPARAN • RIGHTPARAN

    RIGHTPARAN          shift, and go to state 33
    DOT                 shift, and go to state 12
    RAW_STRING          shift, and go to state 13
    INTERPRETED_STRING  shift, and go to state 14
    IDENTIFIER          shift, and go to state 4

    PackageName     go to state 15
    ImportSpecList  go to state 34
    ImportSpec      go to state 35
    ImportPath      go to state 17
    String          go to state 18


State 12

   14 ImportSpec: DOT • ImportPath

    RAW_STRING          shift, and go to state 13
    INTERPRETED_STRING  shift, and go to state 14

    ImportPath  go to state 36
    String      go to state 18


State 13

  233 String: RAW_STRING •

    $default  reduce using rule 233 (String)


State 14

  234 String: INTERPRETED_STRING •

    $default  reduce using rule 234 (String)


State 15

   13 ImportSpec: PackageName • ImportPath

    RAW_STRING          shift, and go to state 13
    INTERPRETED_STRING  shift, and go to state 14

    ImportPath  go to state 37
    String      go to state 18


State 16

   10 ImportDecl: IMPORT ImportSpec •

    $default  reduce using rule 10 (ImportDecl)


State 17

   15 ImportSpec: ImportPath •

    $default  reduce using rule 15 (ImportSpec)


State 18

   16 ImportPath: String •

    $default  reduce using rule 16 (ImportPath)


State 19

   41 FunctionDecl: FUNC • IDENTIFIER OpenBlock Signature FunctionBody CloseBlock
   42             | FUNC • IDENTIFIER OpenBlock Signature CloseBlock
   43 MethodDecl: FUNC • Receiver IDENTIFIER Signature
   44           | FUNC • Receiver IDENTIFIER Signature FunctionBody

    LEFTPARAN   shift, and go to state 38
    IDENTIFIER  shift, and go to state 39

    Parameters  go to state 40
    Receiver    go to state 41


State 20

   57 VarDecl: VAR • VarSpec
   58        | VAR • LEFTPARAN VarSpecList RIGHTPARAN

    LEFTPARAN   shift, and go to state 42
    IDENTIFIER  shift, and go to state 43

    VarSpec         go to state 44
    IdentifierList  go to state 45


State 21

   64 ConstDecl: CONST • ConstSpec
   65          | CONST • LEFTPARAN ConstSpecList RIGHTPARAN
   66          | CONST • LEFTPARAN RIGHTPARAN

    LEFTPARAN   shift, and go to state 46
    IDENTIFIER  shift, and go to state 43

    ConstSpec       go to state 47
    IdentifierList  go to state 48


State 22

  207 TypeDecl: TYPE • LEFTPARAN TypeSpecList RIGHTPARAN
  208         | TYPE • TypeSpec

    LEFTPARAN   shift, and go to state 49
    IDENTIFIER  shift, and go to state 50

    TypeSpec   go to state 51
    AliasDecl  go to state 52
    TypeDef    go to state 53


State 23

    6 ImportDeclList: ImportDeclList ImportDecl • SCOLON

    SCOLON  shift, and go to state 54


State 24

    1 SourceFile: PackageClause SCOLON ImportDeclList TopLevelDeclList •
   17 TopLevelDeclList: TopLevelDeclList • TopLevelDecl SCOLON

    FUNC   shift, and go to state 19
    VAR    shift, and go to state 20
    CONST  shift, and go to state 21
    TYPE   shift, and go to state 22

    $default  reduce using rule 1 (SourceFile)

    TopLevelDecl  go to state 55
    Declaration   go to state 26
    FunctionDecl  go to state 27
    MethodDecl    go to state 28
    VarDecl       go to state 29
    ConstDecl     go to state 30
    TypeDecl      go to state 31


State 25

   18 TopLevelDeclList: TopLevelDecl • SCOLON

    SCOLON  shift, and go to state 56


State 26

   19 TopLevelDecl: Declaration •

    $default  reduce using rule 19 (TopLevelDecl)


State 27

   20 TopLevelDecl: FunctionDecl •

    $default  reduce using rule 20 (TopLevelDecl)


State 28

   21 TopLevelDecl: MethodDecl •

    $default  reduce using rule 21 (TopLevelDecl)


State 29

   39 Declaration: VarDecl •

    $default  reduce using rule 39 (Declaration)


State 30

   40 Declaration: ConstDecl •

    $default  reduce using rule 40 (Declaration)


State 31

   38 Declaration: TypeDecl •

    $default  reduce using rule 38 (Declaration)


State 32

    7 ImportDeclList: ImportDecl SCOLON •

    $default  reduce using rule 7 (ImportDeclList)


State 33

    9 ImportDecl: IMPORT LEFTPARAN RIGHTPARAN •

    $default  reduce using rule 9 (ImportDecl)


State 34

    8 ImportDecl: IMPORT LEFTPARAN ImportSpecList • RIGHTPARAN
   11 ImportSpecList: ImportSpecList • ImportSpec SCOLON

    RIGHTPARAN          shift, and go to state 57
    DOT                 shift, and go to state 12
    RAW_STRING          shift, and go to state 13
    INTERPRETED_STRING  shift, and go to state 14
    IDENTIFIER          shift, and go to state 4

    PackageName  go to state 15
    ImportSpec   go to state 58
    ImportPath   go to state 17
    String       go to state 18


State 35

   12 ImportSpecList: ImportSpec • SCOLON

    SCOLON  shift, and go to state 59


State 36

   14 ImportSpec: DOT ImportPath •

    $default  reduce using rule 14 (ImportSpec)


State 37

   13 ImportSpec: PackageName ImportPath •

    $default  reduce using rule 13 (ImportSpec)


State 38

   79 Parameters: LEFTPARAN • RIGHTPARAN
   80           | LEFTPARAN • ParameterList RIGHTPARAN
   81           | LEFTPARAN • ParameterList COMMA RIGHTPARAN

    RIGHTPARAN  shift, and go to state 60
    IDENTIFIER  shift, and go to state 43

    ParameterList   go to state 61
    ParameterDecl   go to state 62
    IdentifierList  go to state 63


State 39

   41 FunctionDecl: FUNC IDENTIFIER • OpenBlock Signature FunctionBody CloseBlock
   42             | FUNC IDENTIFIER • OpenBlock Signature CloseBlock

    $default  reduce using rule 2 (OpenBlock)

    OpenBlock  go to state 64


State 40

   87 Receiver: Parameters •

    $default  reduce using rule 87 (Receiver)


State 41

   43 MethodDecl: FUNC Receiver • IDENTIFIER Signature
   44           | FUNC Receiver • IDENTIFIER Signature FunctionBody

    IDENTIFIER  shift, and go to state 65


State 42

   58 VarDecl: VAR LEFTPARAN • VarSpecList RIGHTPARAN

    IDENTIFIER  shift, and go to state 43

    VarSpecList     go to state 66
    VarSpec         go to state 67
    IdentifierList  go to state 45


State 43

   86 IdentifierList: IDENTIFIER •

    $default  reduce using rule 86 (IdentifierList)


State 44

   57 VarDecl: VAR VarSpec •

    $default  reduce using rule 57 (VarDecl)


State 45

   61 VarSpec: IdentifierList • Type
   62        | IdentifierList • Type ASSGN_OP ExpressionList
   63        | IdentifierList • ASSGN_OP ExpressionList
   85 IdentifierList: IdentifierList • COMMA IDENTIFIER

    STRUCT      shift, and go to state 68
    MAP         shift, and go to state 69
    MUL         shift, and go to state 70
    LEFTSQUARE  shift, and go to state 71
    COMMA       shift, and go to state 72
    IDENTIFIER  shift, and go to state 73
    ASSGN_OP    shift, and go to state 74

    LiteralType  go to state 75
    Type         go to state 76
    OperandName  go to state 77
    SliceType    go to state 78
    MapType      go to state 79
    StructType   go to state 80
    PointerType  go to state 81
    ArrayType    go to state 82


State 46

   65 ConstDecl: CONST LEFTPARAN • ConstSpecList RIGHTPARAN
   66          | CONST LEFTPARAN • RIGHTPARAN

    RIGHTPARAN  shift, and go to state 83
    IDENTIFIER  shift, and go to state 43

    ConstSpecList   go to state 84
    ConstSpec       go to state 85
    IdentifierList  go to state 48


State 47

   64 ConstDecl: CONST ConstSpec •

    $default  reduce using rule 64 (ConstDecl)


State 48

   69 ConstSpec: IdentifierList • Type
   70          | IdentifierList • Type ASSGN_OP ExpressionList
   71          | IdentifierList • ASSGN_OP ExpressionList
   85 IdentifierList: IdentifierList • COMMA IDENTIFIER

    STRUCT      shift, and go to state 68
    MAP         shift, and go to state 69
    MUL         shift, and go to state 70
    LEFTSQUARE  shift, and go to state 71
    COMMA       shift, and go to state 72
    IDENTIFIER  shift, and go to state 73
    ASSGN_OP    shift, and go to state 86

    LiteralType  go to state 75
    Type         go to state 87
    OperandName  go to state 77
    SliceType    go to state 78
    MapType      go to state 79
    StructType   go to state 80
    PointerType  go to state 81
    ArrayType    go to state 82


State 49

  207 TypeDecl: TYPE LEFTPARAN • TypeSpecList RIGHTPARAN

    IDENTIFIER  shift, and go to state 50

    TypeSpecList  go to state 88
    TypeSpec      go to state 89
    AliasDecl     go to state 52
    TypeDef       go to state 53


State 50

  213 AliasDecl: IDENTIFIER • ASSGN_OP Type
  214 TypeDef: IDENTIFIER • Type
